[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Turret.gd" type="Script" id=1]
[ext_resource path="res://textures/Range2.png" type="Texture" id=2]
[ext_resource path="res://textures/beam.png" type="Texture" id=3]
[ext_resource path="res://textures/turretbody.png" type="Texture" id=4]
[ext_resource path="res://Mesh/turret.mesh" type="ArrayMesh" id=5]
[ext_resource path="res://Mesh/crystal.mesh" type="ArrayMesh" id=6]
[ext_resource path="res://textures/Crystal_red.jpg" type="Texture" id=7]
[ext_resource path="res://textures/HPBar.png" type="Texture" id=8]
[ext_resource path="res://textures/HPBarOutline2.png" type="Texture" id=9]

[sub_resource type="CylinderShape" id=1]
radius = 2.81587
height = 2.5873

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_texture = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.466667 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 0.2, 1 )

[sub_resource type="CylinderShape" id=6]
radius = 9.0

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=8]
size = Vector2( 18, 18 )

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.6, 0 ), Vector3( 0, 1.4, 0 ), Vector3( 0, 1.6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crystal:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="CylinderShape" id=10]
radius = 11.0

[sub_resource type="QuadMesh" id=11]
size = Vector2( 4, 4 )

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=13]
resource_local_to_scene = true
render_priority = 2
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = SubResource( 12 )

[node name="Turret" type="StaticBody" groups=["towerb"]]
collision_layer = 48
collision_mask = 48
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43031, 0 )
shape = SubResource( 1 )

[node name="Base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21066, 0 )
mesh = ExtResource( 5 )
material/0 = SubResource( 2 )

[node name="Crystal" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 6.51683e-07, 0, 1, 0, -6.51683e-07, 0, 1, 0, 1.6, 0 )
mesh = ExtResource( 6 )
material/0 = SubResource( 3 )

[node name="Cannon" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )

[node name="Nozzle" type="Spatial" parent="Cannon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )

[node name="RayCast" type="RayCast" parent="Cannon/Nozzle"]
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 33

[node name="Beam" type="MeshInstance" parent="Cannon/Nozzle"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )
visible = false
material_override = SubResource( 4 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = null

[node name="Area" type="Area" parent="."]
collision_layer = 33
collision_mask = 33
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 6 )

[node name="Range" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.05, 0 )
visible = false
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = null

[node name="CrystalRotate" type="AnimationPlayer" parent="."]
autoplay = "Rotate"
playback_speed = 0.08
anims/Rotate = SubResource( 9 )

[node name="Alert" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 33
collision_mask = 33

[node name="CollisionShape" type="CollisionShape" parent="Alert"]
shape = SubResource( 10 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 200, 200 )
transparent_bg = true
render_target_v_flip = true

[node name="HPBar" type="TextureProgress" parent="Viewport"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 25 )
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.32549, 0.588235, 1, 1 )
nine_patch_stretch = true

[node name="TextPop" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.80192, 0 )
cast_shadow = 0
mesh = SubResource( 11 )
material/0 = SubResource( 13 )

[connection signal="input_event" from="." to="." method="_on_Turret_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_Turret_mouse_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Alert" to="." method="_on_Alert_body_entered"]
[connection signal="body_exited" from="Alert" to="." method="_on_Alert_body_exited"]
